se modificó color

--- a/css.css
+++ b/css.css
@@ -12,7 +12,7 @@ html, body{
 
 .general{
   background-color: #E1BEE7;
-  border: 1px solid indigo;
+  border: 1px solid blue;
   border-radius: 15px;
   width: 50%;
 }
